feature: reponse stock by point sale, stock deposit and all product
