# internal/schemas/stock.go
@@ -1,1 +1,12 @@
 package schemas
+
+type PointSaleStock struct {
+	ID    uint   `json:"id"`
+	Name  string `json:"name"`
+	Stock float64 `json:"stock"`
+}
+
+type StockDepositResponse struct {
+	ID          uint   `json:"id"`
+	Stock       float64    `json:"stock"`
+}
